objects/sked_Admin_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_Token__c</fullName>
        <label>API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Dispatch_Duration__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>If a job has been created and allocated and the status of the job is &quot;Pending Dispatch&quot;, and the start date is MORE than this number of days, then the job should be dispatched.</inlineHelpText>
        <label>Auto-Dispatch Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Travel_Time_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Travel Time Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAT_Break_Time__c</fullName>
        <defaultValue>30</defaultValue>
        <label>NAT Break Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAT_Min_Duration_for_2nd_class__c</fullName>
        <defaultValue>120</defaultValue>
        <label>NAT Min Duration for 2nd class</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAT_Min_Duration_to_have_break__c</fullName>
        <defaultValue>300</defaultValue>
        <label>NAT Min Duration to have break</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Respect_Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respect Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduling_Email__c</fullName>
        <label>Scheduling Email</label>
        <type>Email</type>
    </fields>
    <label>Skedulo Admin Setting</label>
</CustomObject>